kubernetes/bankapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  namespace: bankapp-namespace
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Force HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Use Let's Encrypt
    nginx.ingress.kubernetes.io/proxy-set-headers: "ingress-headers"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: bankapp_session
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  tls:
  - hosts:
    - <ip address> # on which argo is runnig
    secretName: bankapp-tls-secret
  ingressClassName: nginx
  rules:
  - host: <ip address> # on which argo is runnig
    http:

    paths:
      - pathType: Prefix
        path: /
        backend:
        service:
        name: bankapp-service
        port: 
         number: 8080
      - path: /nginx
        pathType: Prefix
        backend:
         service:
          name: bankapp-nginx-service
          port:
           number: 80
